Fixes image size on smaller screens

--- a/css/style.css
+++ b/css/style.css
@@ -313,3 +313,8 @@ html {
     text-align: center;
   }
  }
+ @media only screen and (max-width: 600px) {
+  .projpic {
+    max-width: 300px;
+  }
+ }
